main/default/objects/Journey__c/fields/Contact_Us_Tag_Line__c.field-meta.xml
<CustomField>
    <fullName>Contact_Us_Tag_Line__c</fullName>
    <description>Contact Us Tag Line</description>
    <label>Contact Us Tag Line</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>