main/default/objects/Journey__c/fields/Contact_Us_User__c.field-meta.xml
<CustomField>
    <fullName>Contact_Us_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Us User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Journeys</relationshipName>
    <type>Lookup</type>
</CustomField>