main/default/objects/Journey__c/fields/Journey_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Journey_Image_URL__c</fullName>
    <description>Journey Image URL</description>
    <label>Journey Image URL</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>