main/default/objects/Journey__c/fields/Journey_Preview_URL__c.field-meta.xml
<CustomField>
    <fullName>Journey_Preview_URL__c</fullName>
    <description>URL of Journey for preview</description>
    <label>Journey Landing Page URL</label>
    <type>Url</type>
</CustomField>