main/default/objects/Journey__c/fields/Journey_Progress__c.field-meta.xml
<CustomField>
    <fullName>Journey_Progress__c</fullName>
    <description>Journey Progress</description>
    <formula>( Started_Milestones__c /  Total_Milestones__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Generic Journey Milestone Progression</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>