main/default/objects/Journey__c/fields/Publish_Date__c.field-meta.xml
<CustomField>
    <fullName>Publish_Date__c</fullName>
    <description>Publish Date</description>
    <label>Publish Date</label>
    <type>Date</type>
</CustomField>