main/default/objects/Journey__c/fields/Started_Milestones__c.field-meta.xml
<CustomField>
    <fullName>Started_Milestones__c</fullName>
    <description>Counts the Started Milestones</description>
    <label>Started Milestones</label>
    <summaryFilterItems>
        <field>Milestone__c.Is_Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Milestone__c.Checkpoint__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Milestone__c.Child_Milestone__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Milestone__c.Milestone_Started__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Milestone__c.Journey__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>