main/default/objects/Journey__c/fields/Subtitle__c.field-meta.xml
<CustomField>
    <fullName>Subtitle__c</fullName>
    <description>Subtitle</description>
    <label>Subtitle</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>