main/default/objects/Journey__c/fields/Total_Milestones__c.field-meta.xml
<CustomField>
    <fullName>Total_Milestones__c</fullName>
    <description>Total number of milestones</description>
    <label>Total Milestones</label>
    <summaryFilterItems>
        <field>Milestone__c.Is_Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Milestone__c.Child_Milestone__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Milestone__c.RecordTypeId</field>
        <operation>notEqual</operation>
        <value>Checkpoint</value>
    </summaryFilterItems>
    <summaryForeignKey>Milestone__c.Journey__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>