main/default/objects/Journey__c/fields/Total_Participants__c.field-meta.xml
<CustomField>
    <fullName>Total_Participants__c</fullName>
    <description>Total Number of Participants</description>
    <label>Total Participants</label>
    <summaryForeignKey>Journey_Participant__c.Journey__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>