main/default/objects/Journey__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Campaign__c</columns>
    <columns>Journey_Preview_URL__c</columns>
    <columns>Publish_Date__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Total_Participants__c</columns>
    <columns>Total_Milestones__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>